fix: aadd a body overflow: hidden when logging in and registering

--- a/rslang/src/styles/base/_base.scss
+++ b/rslang/src/styles/base/_base.scss
@@ -24,6 +24,10 @@ body {
   font-size: 1rem;
   background-color: $bg;
   color: $text;
+
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 .page {
